bk_ida/gccida/c0/df_bb_reg_use_chain_create
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_use_chain_create/src/df.c:1854:4: error: expected ';' after expression
rtx insn; // [rsp+28h] [rbp-18h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_use_chain_create/src/df.c:1854:5: error: use of undeclared identifier 'insn'
rtx insn; // [rsp+28h] [rbp-18h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_use_chain_create/src/df.c:1856:7: error: use of undeclared identifier 'insn'
for ( insn = bb->head; ; insn = insn[1].fld[0].rtx ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_use_chain_create/src/df.c:1856:26: error: use of undeclared identifier 'insn'
for ( insn = bb->head; ; insn = insn[1].fld[0].rtx ) 
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_use_chain_create/src/df.c:1856:33: error: use of undeclared identifier 'insn'
for ( insn = bb->head; ; insn = insn[1].fld[0].rtx ) 
                                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_use_chain_create/src/df.c:1859:6: error: use of undeclared identifier 'insn'
if ( insn ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_use_chain_create/src/df.c:1860:6: error: use of undeclared identifier 'insn'
v3 = insn != bb->end[1].fld[0].rtx; 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_use_chain_create/src/df.c:1863:47: error: use of undeclared identifier 'insn'
if ( rtx_class[( unsigned __int16)*( _DWORD *)insn] == 105 ) 
                                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_use_chain_create/src/df.c:1865:26: error: use of undeclared identifier 'insn'
for ( link = df_0->insns[insn->fld[0].rtuint].uses; link; link = link->next ) 
                         ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_use_chain_create/src/obj/df.o] Error 1
